<resources>
    <string name="app_name">Healme</string>
    <string name="title_activity_apotek_location">Map</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="scan">Scan</string>
    <string name="cough">Batuk</string>
    <string name="sneeze">Flu</string>
    <string name="headache">Sakit Kepala</string>
    <string name="see_all">See All</string>
    <string name="apotek">Apotek</string>
    <string name="obat">Obat</string>
</resources>
